--- a/MassAutoGarage/Views/HRMS_SalesTarget/SalesTarget.cshtml
+++ b/MassAutoGarage/Views/HRMS_SalesTarget/SalesTarget.cshtml
@@ -212,7 +212,7 @@
                                         <tbody>
                                         </tbody>
                                         <tfoot>
-                                            <tr>
+                                            @*<tr>
                                                 <td>
                                                     <input type="text" name="fromdate" class="form-control txtFromDate" id="txtFromDate" />
                                                 </td>
@@ -225,7 +225,25 @@
                                                 <td>
                                                     <button type="button" id="btnAdd" class="btn btn-xs btn-primary classAdd" onclick="Add()">Add More</button>
                                                 </td>
-                                            </tr>
+                                            </tr>*@
+
+
+
+                                            <tr>
+                                                    <td>
+                                                        <input type="text" name="FromDate" class="form-control txtFromDate" id="FromDate" />
+                                                    </td>
+                                                    <td>
+                                                        <input type="text" name="ToDate" class="form-control txtToDate" id="ToDate" />
+                                                    </td>
+                                                    <td>
+                                                        <input type="text" name="Target" class="form-control txttarget" id="Target" />
+                                                    </td>
+                                                    <td>
+                                                        <button type="button" id="btnAdd" class="btn btn-xs btn-primary classAdd" onclick="Add()">Add More</button>
+                                                    </td>
+                                                </tr>
+
                                         </tfoot>
                                     </table>
 
@@ -254,32 +272,32 @@
 }
 
 
-    @section scripts{
-        <!-- prismjs plugin -->
-        <script src="~/assets/libs/prismjs/prism.js"></script>
-        <script src="~/assets/js/pages/form-validation.init.js"></script>
-        <script src="~/assets/js/app.js"></script>
+@section scripts{
+    <!-- prismjs plugin -->
+    <script src="~/assets/libs/prismjs/prism.js"></script>
+    <script src="~/assets/js/pages/form-validation.init.js"></script>
+    <script src="~/assets/js/app.js"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-        <script src="~/assets/js/pages/select2.init.js"></script>
-        <script src="~/assets/libs/prismjs/prism.js"></script>
-        <script src="~/assets/js/app.js"></script>
+    <script src="~/assets/js/pages/select2.init.js"></script>
+    <script src="~/assets/libs/prismjs/prism.js"></script>
+    <script src="~/assets/js/app.js"></script>
 
-    }
-    @*<script src="~/Scripts/jquery-3.4.1.min.js"></script>*@
-    <script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
+}
+@*<script src="~/Scripts/jquery-3.4.1.min.js"></script>*@
+<script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
 
 
-    @*<script src="~/Content/js/jquery.min.js"></script>*@
+@*<script src="~/Content/js/jquery.min.js"></script>*@
 
 <script src="~/MyApp/HRMS_SalesTarget.js"></script>
 
 
 
-    <script type="text/javascript">
+    @*<script type="text/javascript">
 
 
         function Add() {
@@ -332,10 +350,169 @@
                 table.deleteRow(row[0].rowIndex);
             }
         };
-    </script>
+    </script>*@
 
 
 @*///////////////////////////////////////////////////////////////////////////////////////////////////////////////////*@
+
+
+@*<script>
+        $("#btnsave").click(function () {
+            debugger;
+            var SalesId_ = $("#SalesId").val();
+
+            var tableLength = $("#example tr").length;
+
+            var ProductListArr = [];
+
+            if (SalesId_ != "" && tableLength > 0) {
+
+                if (tableLength > 0) {
+
+                    for (var i = 0; i < tableLength; i++) {
+
+                        var ProductList = {
+                            SalesId: SalesId_,
+
+                            FromDate: $("#example tBody tr:eq(" + i + ")").find('td:eq(0)').html(),
+                            ToDate: $("#example tBody tr:eq(" + i + ")").find('td:eq(1)').html(),
+                            Target: $("#example tBody tr:eq(" + i + ")").find('td:eq(2)').html(),
+                        };
+                        ProductListArr.push(ProductList);
+                    }
+                    $.ajax({
+                        type:'POST',
+                        url:'/HRMS_SalesTarget/SaveSalesTarget',
+                        data: JSON.stringify(ProductListArr),
+                        contentType: "application/json; charset=utf-8",
+                        dataType: 'json',
+                        success: function (data) {
+
+                            if (data.Result == "yes") {
+                                swal({
+                                    title: "Success",
+                                    text: "Records Successfully Saved",
+                                    type: "success",
+                                }).then(function (isConfirm) {
+                                    if (isConfirm) {
+                                        /* window.location.reload();*/
+                                        var url = "/HRMS_SalesTarget/SalesTarget";
+                                        window.location.href = url;
+                                    } else {
+                                    }
+                                });
+                            }
+                        },
+                    })
+                }
+            }
+        })
+    </script>*@
+
+
+@*<script>
+        $("#btnsave").click(function () {
+            debugger;
+            var SalesId_ = $("#SalesId").val();
+
+            var tableLength = $("#example tr").length;
+
+            var ProductListArr = [];
+
+            if (SalesId_ != "" && tableLength > 0) {
+
+
+                $.ajax({
+                    type: 'POST',
+                    url: '/HRMS_SalesTarget/SaveSalesTarget',
+                    data: JSON.stringify(ProductListArr),
+                    contentType: "application/json; charset=utf-8",
+                    dataType: 'json',
+                    success: function (data) {
+
+                        if (data.Result == "yes") {
+                            swal({
+                                title: "Success",
+                                text: "Records Successfully Saved",
+                                type: "success",
+                            }).then(function (isConfirm) {
+                                if (isConfirm) {
+                                    /* window.location.reload();*/
+                                    var url = "/HRMS_SalesTarget/SalesTarget";
+                                    window.location.href = url;
+                                } else {
+                                }
+                            });
+                        }
+                    },
+                })
+
+            }
+        })
+
+    </script>*@
+
+
+
+<script src="~/MyApp/HRMS_SalesTarget.js"></script>
+
+
+
+<script type="text/javascript">
+
+
+    function Add() {
+        debugger;
+        AddRow($("#FromDate").val(), $("#ToDate").val(), $("#Target").val());
+        $("#FromDate").val("");
+        $("#ToDate").val("");
+        $("#Target").val("");
+
+    };
+
+    function AddRow(FromDate, ToDate, Target) {
+        debugger;
+        //Get the reference of the Table's TBODY element.
+        var tBody = $("#example > TBODY")[0];
+
+        //Add Row.
+        row = tBody.insertRow(-1);
+
+        //Add Name cell.
+        var cell = $(row.insertCell(-1));
+        cell.html(FromDate);
+        //Add Name cell.
+        var cell = $(row.insertCell(-1));
+        cell.html(ToDate);
+        //Add Country cell.
+        cell = $(row.insertCell(-1));
+        cell.html(Target);
+
+        //Add Button cell.
+        cell = $(row.insertCell(-1));
+        var btnRemove = $("<input />");
+        btnRemove.attr("type", "button");
+        btnRemove.attr("onclick", "Remove(this);");
+        btnRemove.val("Remove");
+        cell.append(btnRemove);
+    };
+
+    function Remove(button) {
+        debugger;
+        //Determine the reference of the Row using the Button.
+        var row = $(button).closest("TR");
+        var name = $("TD", row).eq(0).html();
+        if (confirm("Do you want to delete: " + name)) {
+
+            //Get the reference of the Table.
+            var table = $("#example")[0];
+
+            //Delete the Table row using it's Index.
+            table.deleteRow(row[0].rowIndex);
+        }
+    };
+</script>
+
 
 
 <script>
@@ -354,31 +531,34 @@
                 for (var i = 0; i < tableLength; i++) {
 
                     var ProductList = {
-                        SalesId: SalesId_,
 
-                        FromDate: $("#example tBody tr:eq(" + i + ")").find('td:eq(0)').html(),
+
+                       
+                      FromDate: $("#example tBody tr:eq(" + i + ")").find('td:eq(0)').html(),
                         ToDate: $("#example tBody tr:eq(" + i + ")").find('td:eq(1)').html(),
-                        Target: $("#example tBody tr:eq(" + i + ")").find('td:eq(2)').html(),
+                          Target: $("#example tBody tr:eq(" + i + ")").find('td:eq(2)').html(),
+
+
                     };
                     ProductListArr.push(ProductList);
                 }
 
-
                 $.ajax({
-                    type:'POST',
-                    url:'/HRMS_SalesTarget/SaveSalesTarget',
+                    type: 'POST',
+                    url: '/HRMS_SalesTarget/SaveSalesTarget',
                     data: JSON.stringify(ProductListArr),
                     contentType: "application/json; charset=utf-8",
                     dataType: 'json',
                     success: function (data) {
-                        if (data == "1") {
-                            $("#divLoader").hide();
+
+                        if (data.Result == "yes") {
                             swal({
-                                title: "success",
-                                text: "Record Successfully Saved.",
+                                title: "Success",
+                                text: "Records Successfully Saved",
                                 type: "success",
                             }).then(function (isConfirm) {
                                 if (isConfirm) {
+                                    /* window.location.reload();*/
                                     var url = "/HRMS_SalesTarget/SalesTarget";
                                     window.location.href = url;
                                 } else {
@@ -390,6 +570,5 @@
             }
         }
     })
+
 </script>
-
-
